Chrash in Weight and Paint mode #34856

Closed
opened 2013-04-03 12:37:28 +02:00 by kevin loddewykx · 3 comments

%%%--- Operating System, Graphics card ---
Windows 7 64 bit
AMD Radeon HD 6470M

- Blender version with error, and version that worked ---

Don't now if it worked before but in

   Official: 2.66a 
   Build: 2.66-r55744-win64

it happens.

- Short description of error ---

Blender chrashes when pressing ctrl-z in Weight Paint or Vertex Paint mode

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Run the script provided in the blend, click an object created by the script to make it active. Go to weight or vertex paint mode in the 3D view and press ctrl-z
Blender will chrash.
If you remove the last two lines of the script blender will not chrash when pressing ctrl-z in paint mode. If you place a mesh or camera before running the script blender will not chrash either. When you place a lamp and run the script it will still chrash in the paint modes.

%%%

%%%--- Operating System, Graphics card --- Windows 7 64 bit AMD Radeon HD 6470M - Blender version with error, and version that worked --- Don't now if it worked before but in ``` Official: 2.66a Build: 2.66-r55744-win64 ``` it happens. - Short description of error --- Blender chrashes when pressing ctrl-z in Weight Paint or Vertex Paint mode - Steps for others to reproduce the error (preferably based on attached .blend file) --- Run the script provided in the blend, click an object created by the script to make it active. Go to weight or vertex paint mode in the 3D view and press ctrl-z Blender will chrash. If you remove the last two lines of the script blender will not chrash when pressing ctrl-z in paint mode. If you place a mesh or camera before running the script blender will not chrash either. When you place a lamp and run the script it will still chrash in the paint modes. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.

The last line should have given an error message but it didn't, as you're passing an object to be removed from the list of meshes.%%%

%%%Fix in svn, thanks for the report. The last line should have given an error message but it didn't, as you're passing an object to be removed from the list of meshes.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34856
No description provided.