Fix #34856: crash passing an object rather than a mesh to bpy.data.mesh.remove(), this should give an error message but it didn't.